corrected horizontal scrolling in mobile

--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -406,6 +406,18 @@ header h1 {
 
 /* Toggle and hamburger only show together in mobile */
 @media (max-width: 768px) {
+
+  html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+  }
+
+  img {
+  max-width: 100%;
+  height: auto;
+  }
+
+
   header {
     flex-direction: column;
     align-items: flex-start;
@@ -578,17 +590,14 @@ header h1 {
     line-height: 1.6;
     }
 
-    .foooter-address{
-    margin-left: 20px;
-    }
+    .foooter-address,
+  .modification,
+  .socialinks {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
 
-    .modification{
-        margin-left: 20px;
-    }
-
-    .socialinks{
-    margin-left: 100px;
-    } 
 }
 
 .dark-mode {
